--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
+    "react-image-magnify": "^2.7.4",
     "react-scripts": "5.0.1",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "source-map-loader": "^5.0.0",
